# flux-security

./: .gitignore  .mergify.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  NEWS.md  README.md  codecov.yml  configure.ac  flake.nix
.github/workflows/: codeql.yml  main.yml
config/: x_ac_pam.m4
doc/: Makefile.am  conf.py  index.rst  manpages.py  requirements.txt
doc/man3/: flux_security_aux_set.rst  flux_security_create.rst  flux_security_last_error.rst  flux_sign_unwrap.rst  flux_sign_wrap.rst  index.rst
doc/man5/: flux-config-security-imp.rst  flux-config-security-sign.rst  flux-config-security.rst  index.rst
doc/man8/: flux-imp.rst  index.rst
doc/test/: spell.en.pws  spellcheck
etc/: Makefile.am  sign.toml
src/: Makefile.am
src/imp/: Makefile.am  casign.c  imp.c  imp_log.c  imp_log.h  imp_state.h  impcmd-list.c  impcmd.c  impcmd.h  kill.c  passwd.c  passwd.h  pidinfo.c  pidinfo.h  privsep.c  privsep.h  run.c  sudosim.c  sudosim.h  testconfig.c  version.c  whoami.c
src/imp/exec/: exec.c  pam.c  pam.h  user.c  user.h
src/imp/imp.conf.d/: imp.toml
src/imp/test/: imp_log.c  impcmd.c  passwd.c  pidinfo.c  privsep.c
src/lib/: Makefile.am  context.c  context.h  context_private.h  flux-security.pc.in  libflux-security.map  sigcert.c  sigcert.h  sign.c  sign.h  sign_curve.c  sign_mech.h  sign_munge.c  sign_none.c  version.c  version.h.in
src/lib/test/: context.c  keygen.c  sigcert.c  sign.c  version.c
src/libca/: Makefile.am  ca.c  ca.h  sigcert.c  sigcert.h  signer.c  signer.h
src/libca/test/: ca.c  sigcert.c  signer.c
src/libtap/: Makefile.am  tap.c  tap.h
src/libtomlc99/: Makefile.am  toml_tap.c
src/libtomlc99/test/: toml.c
src/libutil/: Makefile.am  aux.h  ca.c  ca.h  cf.c  cf.h  hash.c  hash.h  kv.c  kv.h  macros.h  path.c  path.h  sigcert.c  sigcert.h  signer.c  tomltk.c  tomltk.h
src/libutil/test/: aux.c  base64_test.c  ca.c  cf.c  hash.c  keygen.c  kv.c  path.c  sha256.c  sigcert.c  signer.c  tomltk.c
src/test/: checks_run.sh  generate-matrix.py
src/test/docker/: docker-run-checks.sh
src/test/docker/checks/: Dockerfile
t/: Makefile.am  t0000-sharness.t  t0100-sudo-unit-tests.t  t0101-cf-path-security.t  t1000-imp-basic.t  t1001-imp-casign.t  t1002-sign-munge.t  t1003-sign-curve.t  t2000-imp-exec.t  t2001-imp-kill.t  t2002-imp-run.t  t2003-imp-exec-pam.t
t/sharness.d/: 01-asan.sh  03-munged.sh
t/src/: ca.c  certutil.c  cf.c  getpwuid.c  keygen.c  sanitizers-enabled.c  sign.c  uidlookup.c  verify.c  xsign_curve.c  xsign_munge.c
